--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".feature.game.GameActivity"
+            android:name=".RedactedActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize|stateAlwaysVisible">
             <intent-filter>
